<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/score_card_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/score_card_vertical_margin">

        <TextView
            android:id="@+id/textCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Course Name"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvScoringDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textCourseName"
            android:text="Gross Scoring"
            tools:ignore="HardcodedText" />


        <TableLayout
            android:id="@+id/playerScoreCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCourseName"/>

        <Button
            android:id="@+id/butPrevHole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/playerScoreCard"
            android:text="@string/prev_text" />

        <TextView
            android:id="@+id/tvCurrentHole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/butPrevHole"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:text="@string/one_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/tv_font_size" />

        <Button
            android:id="@+id/butNextHole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/playerScoreCard"
            android:text="@string/next_text" />

        <TableLayout
            android:id="@+id/playerHoleScores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvCurrentHole"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/butNextNine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back_nine_text" />

                <Button
                    android:id="@+id/butDisplayMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/net_score_text" />

                <Button
                    android:id="@+id/butNineGame"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9 Game" />

                <Button
                    android:id="@+id/butGameSummary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_text" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <TextView
                    android:id="@+id/Player_Name_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/butPrev"
                    android:layout_marginStart="11dp"
                    android:layout_weight="2"
                    android:text="@string/player_name_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_minus_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus_text" />

                <TextView
                    android:id="@+id/Player_hole_score_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/four_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_plus_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <TextView
                    android:id="@+id/Player_Name_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/butPrev"
                    android:layout_marginStart="11dp"
                    android:layout_weight="2"
                    android:text="@string/player_name_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_minus_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus_text" />

                <TextView
                    android:id="@+id/Player_hole_score_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/four_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_plus_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <TextView
                    android:id="@+id/Player_Name_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/butPrev"
                    android:layout_marginStart="11dp"
                    android:layout_weight="2"
                    android:text="@string/player_name_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_minus_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus_text" />

                <TextView
                    android:id="@+id/Player_hole_score_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/four_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_plus_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <TextView
                    android:id="@+id/Player_Name_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/butPrev"
                    android:layout_marginStart="11dp"
                    android:layout_weight="2"
                    android:text="@string/player_name_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_minus_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus_text" />

                <TextView
                    android:id="@+id/Player_hole_score_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/four_text"
                    android:textSize="@dimen/tv_font_size" />

                <Button
                    android:id="@+id/Player_plus_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_text" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>
